# crashpad

./: CMakeLists.txt  CMakePresets.json  conanfile.py
cmake/: conan-setup.cmake  conan_util.cmake
handler/: crash_report_upload_thread.cc  handler_main.cc
handler-ui/: CMakeLists.txt  CrashUploadThreadCallbackInterface.h  crash_report_upload_thread.cc  crash_report_upload_thread.h  crash_upload_thread_callback_interface.cpp  crash_upload_thread_callback_interface.h  handler_main.cc  main.cc  medic_attachment_util.cpp  medic_attachment_util.h  mtgui.cpp  test_http_client.cpp  test_upload_thread.cpp
handler-ui/ui/: CMakeLists.txt  CompressUtil.cpp  CompressUtil.h  CrashUploadDialog.cpp  CrashUploadDialog.h  CrashUploadDialog.ui  CrashUploadHandler.cpp  CrashUploadHandler.h  CrashUploadProgressDialog.cpp  CrashUploadProgressDialog.h  CrashUploadProgressDialog.ui  Logging.h  MedicAttachmentUtil.cpp  MedicAttachmentUtil.h  XMedicProject.h
handler-ui/ui/xQt/: CMakeLists.txt  README.md
handler-ui/ui/xQt/include/xQt/: callback_dispatcher.hpp  callback_dispatcher_internal.hpp  callback_event.hpp  callback_respondable.hpp  event_dispatcher.hpp  post_callback.hpp  send_callback.hpp
handler-ui/ui/xQt/src/: callback_dispatcher_internal.cpp
handler-ui/win/: crash_report_exception_handler.cc
util/: CMakeLists.txt
util/net/: http_transport_mac.mm
